# storyflow

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  compile_flags.txt  premake5.lua  vcpkg.json
include/: App.h  AppBase.h
src/: App.cpp  App.h  AppBase.h  MenuBar.cpp  UI.cpp  UI.h  main.cpp
